[tool.poetry]
name = "youtube-to-mp3"
version = "0.1.0"
description = "Project will be to convert youtube urls to mp3 files."
authors = ["Mu'tasim <mmuhib136@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
